# sloc

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  configure.sh
src/app/: main.cpp
src/common/: aliases.hpp  constants.hpp  utils.hpp
src/core/filter/: field_option.hpp  filter.hpp
src/core/options/: running_options.hpp
src/core/sloc/: file_info.hpp  lang_type.hpp  sloc.hpp  state.hpp
src/core/sort/: sort.hpp
